--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -32,7 +36,7 @@
     <!--основний контент-->
     <main>
       <!--portfolio-->
-      <section class="portfolio">
+      <section class="portfolio section">
         <h1 hidden>portfolio</h1>
         <ul class="button-list">
           <li><button type="button" class="pointer">Все</button></li>
