--- a/index.html
+++ b/index.html
@@ -11,107 +11,134 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка-->
     <header class="header">
-      <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
-      <nav>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="site-nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-          <li><a href="#contacts" class="site-nav-link">Контакты</a></li>
+      <div class="header-container container">
+        <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+        <div class="header-nav">
+          <nav>
+            <ul class="site-nav">
+              <li><a href="./index.html" class="site-nav-link">Студия</a></li>
+              <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+              <li><a href="#contacts" class="site-nav-link">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+        <ul class="auth-nav">
+          <li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="auth-nav">
-        <li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <!--основний контент-->
     <main class="main">
       <!--Секція герой-->
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">
-          <span class="hero-btn">Заказать услугу</span>
-        </button>
-      </section>
-      <!--особливості-->
-      <section class="specifics">
-        <h2 hidden>преимущества</h2>
-        <ul class="specifics-list">
-          <li>
-            <h3 class="specifics-title">Внимание к деталям</h3>
-            <p class="specifics-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">Пунктуальность</h3>
-            <p class="specifics-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">Планирование</h3>
-            <p class="specifics-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="specifics-title">Современные технологии</h3>
-            <p class="specifics-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!--Чем мы занимаемся-->
-      <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
-          <li>
-            <img src="images/1.jpg" alt="Разметка страницы" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images/2.jpg" alt="Разработка моб. приложений" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images/3.jpg" alt="Дизайн" width="370" height="294" />
-          </li>
-        </ul>
-      </section>
-      <!--Наша команда-->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li>
-            <img src="images/Сотрудник1.jpg" alt="фото сотрудника" width="270" height="260" />
-            <h3 class="team-subtitle">Игорь Демьяненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="images/Сотрудник2.jpg" alt="фото сотрудника" width="270" height="260" />
-            <h3 class="team-subtitle">Ольга Репина</h3>
-            <p lang="en" class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="images/Сотрудник3.jpg" alt="фото сотрудника" width="270" height="260" />
-            <h3 class="team-subtitle">Николай Тарасов</h3>
-            <p lang="en" class="team-text">Marketingr</p>
-          </li>
-          <li>
-            <img src="images/Сотрудник4.jpg" alt="фото сотрудника" width="270" height="260" />
-            <h3 class="team-subtitle">Михаил Ермаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="main-container container">
+        <section class="hero section">
+          <div class="hero-container container">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero-button">
+              <span class="hero-btn">Заказать услугу</span>
+            </button>
+          </div>
+        </section>
+
+        <!--особливості-->
+
+        <section class="specifics section">
+          <div class="specifics-container container">
+            <h2 hidden>преимущества</h2>
+            <ul class="specifics-list">
+              <li>
+                <h3 class="specifics-title">Внимание к деталям</h3>
+                <p class="specifics-text">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </li>
+              <li>
+                <h3 class="specifics-title">Пунктуальность</h3>
+                <p class="specifics-text">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за
+                  собой.
+                </p>
+              </li>
+              <li>
+                <h3 class="specifics-title">Планирование</h3>
+                <p class="specifics-text">
+                  Равным образом консультация с широким активом в значительной степени
+                  обуславливает.
+                </p>
+              </li>
+              <li>
+                <h3 class="specifics-title">Современные технологии</h3>
+                <p class="specifics-text">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <!--Чем мы занимаемся-->
+
+        <section class="work section">
+          <div class="work-container container">
+            <h2 class="work-title">Чем мы занимаемся</h2>
+            <ul class="work-list">
+              <li>
+                <img src="images/1.jpg" alt="Разметка страницы" width="370" height="294" />
+              </li>
+              <li>
+                <img src="images/2.jpg" alt="Разработка моб. приложений" width="370" height="294" />
+              </li>
+              <li>
+                <img src="images/3.jpg" alt="Дизайн" width="370" height="294" />
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <!--Наша команда-->
+
+        <section class="team section">
+          <div class="team-container container">
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list">
+              <li>
+                <img src="images/Сотрудник1.jpg" alt="фото сотрудника" width="270" height="260" />
+                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </li>
+              <li>
+                <img src="images/Сотрудник2.jpg" alt="фото сотрудника" width="270" height="260" />
+                <h3 class="team-subtitle">Ольга Репина</h3>
+                <p lang="en" class="team-text">Frontend Developer</p>
+              </li>
+              <li>
+                <img src="images/Сотрудник3.jpg" alt="фото сотрудника" width="270" height="260" />
+                <h3 class="team-subtitle">Николай Тарасов</h3>
+                <p lang="en" class="team-text">Marketingr</p>
+              </li>
+              <li>
+                <img src="images/Сотрудник4.jpg" alt="фото сотрудника" width="270" height="260" />
+                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
     </main>
     <!--Підвал-->
     <footer class="footer">
+      <div class="footer-container container">
       <a href="./index.html" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
       <address>
         <ul class="footer-contacts" id="contacts">
@@ -127,6 +154,7 @@
           <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
           <li><a href="tel:+3809911111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
+        </div>
       </address>
     </footer>
   </body>
