--- a/portfolio.html
+++ b/portfolio.html
@@ -1,162 +1,129 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!--Шапка-->
-    <header class="header">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!--Шапка-->
+  <header class="header">
+    <div class="header-box container">
       <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
       <nav>
         <ul class="site-nav">
-          <li><a href="./index.html" class="site-nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-          <li><a href="#contacts" class="site-nav-link">Контакты</a></li>
+          <li class="nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
+          <li class="nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+          <li class="nav-item"><a href="#contacts" class="site-nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav">
-        <li><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <!--основний контент-->
-    <main>
-      <!--portfolio-->
-      <section class="portfolio section">
+      <div class="auth-box">
+        <ul class="auth-nav">
+          <li class="auth-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
+          <li class="auth-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <!--основний контент-->
+  <main>
+    <!--portfolio-->
+    <section class="portfolio section">
+      <div class="container">
         <h1 hidden>portfolio</h1>
         <ul class="button-list">
-          <li><button type="button" class="pointer">Все</button></li>
-          <li><button type="button" class="pointer">Веб-сайты</button></li>
-          <li><button type="button" class="pointer">Приложения</button></li>
-          <li><button type="button" class="pointer">Дизайн</button></li>
-          <li><button type="button" class="pointer">Маркетинг</button></li>
+          <li class="btn-item"><button type="button" class="pointer">Все</button></li>
+          <li class="btn-item"><button type="button" class="pointer">Веб-сайты</button></li>
+          <li class="btn-item"><button type="button" class="pointer">Приложения</button></li>
+          <li class="btn-item"><button type="button" class="pointer">Дизайн</button></li>
+          <li class="btn-item"><button type="button" class="pointer">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-list">
           <li>
-            <img
-              src="./images/porfolio-page/img.jpg"
-              alt="Технокряк-вебсайт"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img.jpg" alt="Технокряк-вебсайт" width="370" height="294" />
             <h2 class="portfolio-tatle">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-1.jpg"
-              alt="Постер New Orlean vs Golden Star-Дизайн"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-1.jpg" alt="Постер New Orlean vs Golden Star-Дизайн" width="370"
+              height="294" />
             <h2 class="portfolio-tatle">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-2.jpg"
-              alt="Ресторан Seafood-Приложение"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-2.jpg" alt="Ресторан Seafood-Приложение" width="370" height="294" />
             <h2 class="portfolio-tatle">Ресторан Seafood</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-3.jpg"
-              alt="Проект Prime-Маркетинг"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-3.jpg" alt="Проект Prime-Маркетинг" width="370" height="294" />
             <h2 class="portfolio-tatle">Проект Prime</h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-4.jpg"
-              alt="Проект Boxes-Приложение"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-4.jpg" alt="Проект Boxes-Приложение" width="370" height="294" />
             <h2 class="portfolio-tatle">Проект Boxes</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-5.jpg"
-              alt="Inspiration has no Borders-вебсайт"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-5.jpg" alt="Inspiration has no Borders-вебсайт" width="370"
+              height="294" />
             <h2 class="portfolio-tatle">Inspiration has no Borders</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-6.jpg"
-              alt="Издание Limited Edition-Дизайн"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-6.jpg" alt="Издание Limited Edition-Дизайн" width="370" height="294" />
             <h2 class="portfolio-tatle">Издание Limited Edition</h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-7.jpg"
-              alt="Проект LAB-Маркетинг"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-7.jpg" alt="Проект LAB-Маркетинг" width="370" height="294" />
             <h2 class="portfolio-tatle">Проект LAB</h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img
-              src="./images/porfolio-page/img-8.jpg"
-              alt="Growing Business-Приложение"
-              width="370"
-              height="294"
-            />
+            <img src="./images/porfolio-page/img-8.jpg" alt="Growing Business-Приложение" width="370" height="294" />
             <h2 class="portfolio-tatle">Growing Business</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
-      </section>
-    </main>
-    <!--Підвал-->
-    <footer class="footer">
+      </div>
+    </section>
+  </main>
+  <!--Підвал-->
+  <footer class="footer">
+    <div class="footer-box container">
       <a href="./index.html" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
       <address>
         <ul class="footer-contacts" id="contacts">
           <li>
-            <a
-              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="footer-map"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
+            <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              target="_blank" rel="noreferrer noopener" class="footer-map">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
           <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
           <li><a href="tel:+3809911111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
-      </address>
-    </footer>
-  </body>
+    </div>
+    </address>
+  </footer>
+</body>
+
 </html>
+
+
+
+
+
+
+
+
+
