--- a/portfolio.html
+++ b/portfolio.html
@@ -48,52 +48,70 @@
           <li class="btn-item"><button type="button" class="pointer">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-list">
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img.jpg" alt="Технокряк-вебсайт" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-1.jpg" alt="Постер New Orlean vs Golden Star-Дизайн" width="370"
               height="294" />
-            <h2 class="portfolio-tatle">Постер New Orlean vs Golden Star</h2>
+            <div class="portfolio-box">
+              <h2 class="portfolio-tatle">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-2.jpg" alt="Ресторан Seafood-Приложение" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Ресторан Seafood</h2>
             <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-3.jpg" alt="Проект Prime-Маркетинг" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Проект Prime</h2>
             <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-4.jpg" alt="Проект Boxes-Приложение" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Проект Boxes</h2>
             <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./images/porfolio-page/img-5.jpg" alt="Inspiration has no Borders-вебсайт" width="370"
               height="294" />
-            <h2 class="portfolio-tatle">Inspiration has no Borders</h2>
+            <div class="portfolio-box">
+              <h2 class="portfolio-tatle">Inspiration has no Borders</h2>
             <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-6.jpg" alt="Издание Limited Edition-Дизайн" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Издание Limited Edition</h2>
             <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item"> 
             <img src="./images/porfolio-page/img-7.jpg" alt="Проект LAB-Маркетинг" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Проект LAB</h2>
             <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./images/porfolio-page/img-8.jpg" alt="Growing Business-Приложение" width="370" height="294" />
+            <div class="portfolio-box">
             <h2 class="portfolio-tatle">Growing Business</h2>
             <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
         </ul>
       </div>
