--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
               <li class="nav-item"><a href="#contacts" class="site-nav-link">Контакты</a></li>
             </ul>
           </nav>
-        <div class="auth-box">
+        
          <ul class="auth-nav">
            <li class="auth-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
            <li class="auth-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
          </ul>
-        </div>
+        
       </div>
     </header>
     <!--основний контент-->
@@ -113,23 +113,31 @@
             <ul class="team-list">
               <li class="team-item">
                 <img src="images/Сотрудник1.jpg" alt="фото сотрудника" width="270" height="260" />
+                <div class="team-page">
                 <h3 class="team-subtitle">Игорь Демьяненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
+                </div>
               </li>
               <li class="team-item">
                 <img src="images/Сотрудник2.jpg" alt="фото сотрудника" width="270" height="260" />
+                <div class="team-page">
                 <h3 class="team-subtitle">Ольга Репина</h3>
                 <p lang="en" class="team-text">Frontend Developer</p>
+                </div>
               </li>
               <li class="team-item">
                 <img src="images/Сотрудник3.jpg" alt="фото сотрудника" width="270" height="260" />
+                <div class="team-page">
                 <h3 class="team-subtitle">Николай Тарасов</h3>
                 <p lang="en" class="team-text">Marketingr</p>
+                </div>
               </li>
               <li class="team-item">
                 <img src="images/Сотрудник4.jpg" alt="фото сотрудника" width="270" height="260" />
+                <div class="team-page">
                 <h3 class="team-subtitle">Михаил Ермаков</h3>
                 <p lang="en" class="team-text">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
@@ -142,7 +150,7 @@
       <a href="./index.html" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
       <address>
         <ul class="footer-contacts" id="contacts">
-          <li>
+          <li class="footer-item">
             <a
               href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               target="_blank"
@@ -151,8 +159,8 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
-          <li><a href="tel:+3809911111111" class="footer-link">+38 099 111 11 11</a></li>
+          <li class="footer-item"><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
+          <li class="footer-item"><a href="tel:+3809911111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
         </div>
       </address>
